--- a/vagrant/master/Vagrantfile
+++ b/vagrant/master/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "master" do |master|
     master.vm.box = "bento/ubuntu-22.04"
     master.vm.hostname = "master"
-    master.vm.network "public_network", bridge: "Qualcomm QCA9377 802.11ac Wireless Adapter"
+    master.vm.network "public_network", bridge: "Your-Bridge-Adapter-name"
     master.vm.provider "virtualbox" do |vb|
       vb.memory = 2048
       vb.cpus = 2
@@ -10,9 +10,15 @@ Vagrant.configure("2") do |config|
     master.vm.provision "shell", inline: <<-SHELL
       sudo ufw allow 22
       sudo ufw enable
-      # Add your commands here
+      git clone https://github.com/faizan35/kubernetes_cluster_with_kubeadm.git
+      cd kubernetes_cluster_with_kubeadm/vagrant/
+      cp -r scripts ../../scripts
+      chmod +x ../../scripts/*
+      cd ~
+      sudo rm -rf ~/kubernetes_cluster_with_kubeadm/
+
     SHELL
 
-    master.vm.provision "file", source: "../scripts/", destination: "/home/vagrant/scripts/", run: "always"
+    # master.vm.provision "file", source: "../scripts/", destination: "/home/vagrant/", run: "always"
   end
 end
