--- a/vagrant/node/Vagrantfile
+++ b/vagrant/node/Vagrantfile
@@ -10,10 +10,14 @@ Vagrant.configure("2") do |config|
     node.vm.provision "shell", inline: <<-SHELL
       sudo ufw allow 22
       sudo ufw enable
-      # Add your commands here
+      git clone https://github.com/faizan35/kubernetes_cluster_with_kubeadm.git
+      cd kubernetes_cluster_with_kubeadm/vagrant/
+      cp -r scripts ../../scripts
+      chmod +x ../../scripts/*
+      sudo rm -rf ~/kubernetes_cluster_with_kubeadm/
     SHELL
 
-    node.vm.provision "file", source: "../scripts/", destination: "/home/vagrant/scripts/", run: "always"
+    # node.vm.provision "file", source: "../scripts/", destination: "/home/vagrant/", run: "always"
   end
 end
 
