--- a/vagrant/master/Vagrantfile
+++ b/vagrant/master/Vagrantfile
@@ -2,7 +2,9 @@ Vagrant.configure("2") do |config|
   config.vm.define "master" do |master|
     master.vm.box = "bento/ubuntu-22.04"
     master.vm.hostname = "master"
-    master.vm.network "public_network", bridge: "Your-Bridge-Adapter-name"
+    master.vm.network "public_network", bridge: "Qualcomm QCA9377 802.11ac Wireless Adapter", mac: "080027160697"
+    # If the above line causes issues, you can uncomment the next line to choose manually
+    # master.vm.network "public_network"
     master.vm.provider "virtualbox" do |vb|
       vb.memory = 2048
       vb.cpus = 2
@@ -14,11 +16,7 @@ Vagrant.configure("2") do |config|
       cd kubernetes_cluster_with_kubeadm/vagrant/
       cp -r scripts ../../scripts
       chmod +x ../../scripts/*
-      cd ~
       sudo rm -rf ~/kubernetes_cluster_with_kubeadm/
-
     SHELL
-
-    # master.vm.provision "file", source: "../scripts/", destination: "/home/vagrant/", run: "always"
   end
 end
